fix: image not showing of readme file

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -478,6 +478,9 @@ label {
         flex-direction: column;
         align-items: center;
     }
+    .feature__container__captions {
+        width: 80%;
+    }
 
     .feature__parent {
         flex-wrap: nowrap;
